@@ -1,6 +1,16 @@
+12 Apr 2007
+   [TheXception]
+   - Added $system.call to call functions of dll/so files via kvs.
+
+10 Apr 2007
+   [Alexey]
+   - Configurable avatar scaling on load
+   - Human-redable file sized on dcc transfers
+   
 12 Mar 2007
    [Alexey]
    - Added support for remote dns on socks5 proxy
+   - Added option to configure identd output mode
 
 06 Mar 2007
    [Pragma]
